<resources>
    <string name="app_name">SPPB</string>
    <string name="title_home">Home</string>
    <string name="title_users">Users</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_test">Test</string>

    <string name="no_accelerometer_title">No accelerometer.</string>
    <string name="no_accelerometer_descp">
       We are sorry. Your device does not have an accelerometer, so the tests cannot be performed.
    </string>

    <!-- TESTS NAMES -->
    <string name="test_name">Test name</string>
    <string name="all_tests">Full test</string>

    <string name="balance_name">Balance test</string>
    <string name="balance_name1">Balance test - Normal</string>
    <string name="balance_name2">Balance test - Semi tandem</string>
    <string name="balance_name3">Balance test - Tandem</string>

    <string name="gait_name">Gait speed test</string>
    <string name="gait_name1">Gait speed test - First round</string>
    <string name="gait_name2">Gait speed test - Second round</string>

    <string name="chair_name">Chair stand test</string>

    <!-- USERS MANAGEMENT -->
    <string name="btn_add">Add user</string>
    <string name="no_users">There are no saved users.</string>
    <string name="delete">Delete</string>
    <string name="delete_user_confirm">
        Are you sure you want to delete this user?
    </string>

    <string name="dialog_add_user">Username</string>
    <string name="add_age">Year of birth</string>
    <string name="add_weight">Weight</string>
    <string name="add_height">Height</string>
    <string name="add_male">Male</string>
    <string name="add_female">Female</string>
    <string name="need_username">Username field is mandatory.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <!-- EXPLAINING SLIDES -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>

    <!--Balance test-->
    <string name="balan_heading1">Calibrate</string>
    <string name="balan_heading2">Feet together</string>
    <string name="balan_heading3">Semi-tandem</string>
    <string name="balan_heading4">Tandem</string>
    <string name="balan_heading5">Keep the balance</string>

    <string name="balan_descr1">
        Stand with the device on your chest without moving until
        you hear a beep. Follow the voice instructions during all the tests.
    </string>
    <string name="balan_descr2">
        There are three phases. Put your feet together side by side for 10 seconds for the first phase.
    </string>
    <string name="balan_descr3">
        Put the heel of one foot at the height of the big toe of the opposite foot for the second phase.
    </string>
    <string name="balan_descr4">
        Put the heel of one foot in contact with the tip of the other foot for the third phase.
    </string>
    <string name="balan_descr5">
        Try not to lean, if you do, the test will end.
    </string>


    <!--Gait speed test-->
    <string name="gait_heading1">Instructions</string>
    <string name="gait_heading2">Walk</string>
    <string name="gait_heading3">Repeat</string>

    <string name="gait_descr1">
        While standing, touch the screen and follow the voice instructions.
    </string>
    <string name="gait_descr2">
        Travel a distance of 4 meters. Once you reach the end, do not move until instructed.
    </string>
    <string name="gait_descr3">
        Repeat the same process in the opposite direction.
    </string>


    <!--Chair stand test-->
    <string name="chair_heading1">Initial position</string>
    <string name="chair_heading2">Calibrate</string>
    <string name="chair_heading3">Repeat</string>

    <string name="chair_descr1">
        Sit in a chair with your arms crossed over your chest.
    </string>
    <string name="chair_descr2">
        If you do it with the mobile in the chest, try to get up and sit twice following
        the voice instructions.
    </string>
    <string name="chair_descr3">
        After this, from the initial position, get up and sit 5 times in a row.
    </string>



    <!--ACTUAL TEST-->
    <string name="start">Start</string>

    <!--Balance test-->
    <string name="balance_step1">
        Need to calibrate. While standing, put the phone on your chest and do not move until a beep
        sounds. Press any part of the screen to start.
    </string>
    <string name="balance_step2">
        Calibrating.
    </string>

    <string name="balance_step3">
        Phase 1. Put one foot next to the other and do not move for 10 seconds. Touch the screen to start.
    </string>
    <string name="balance_step4">
        Good. Phase 2, semi-tandem position. Touch the screen to start.
    </string>
    <string name="balance_step5">
        Good. Phase 3, tandem position. Touch the screen to start.
    </string>
    <string name="balance_step6">
        End of balance test. Touch the screen to continue.
    </string>
    <string name="desbalanced">
        You have moved. End of the test. Touch the screen to continue.
    </string>


    <!--Gait speed test-->
    <string name="gait_step1">
        With the phone on your chest, touch the screen and walk 4 meters. When you finish,
        do not move until you hear the signal.
    </string>
    <string name="gait_step2">
        Good. Now repeat the process in the opposite direction. Touch the screen to start.
    </string>
    <string name="gait_step3">
        End of gait speed test. Touch the screen to continue.
    </string>
    <string name="gait_error">
        Error. No movement detected. Touch the repeat button to try again or touch any part of the
        screen to continue.
    </string>

    <!-- Chair stand test -->
    <string name="where_phone">Where do you want to place the phone?</string>
    <string name="on_chest">On the chest</string>
    <string name="on_thigh">On the thigh</string>

    <!--CHEST -->
    <string name="chair_chest_step0">
        It is necessary to calibrate the device. Sit in a chair and follow the instructions.
        Touch the screen to start.
    </string>
    <string name="chair_chest_step1">
        End of calibrating. Now, you can stand up and sit down 5 times in a row. Start whenever you want.
    </string>
    <string name="chair_chest_step2">
        And five. End of chair stand test. Touch the screen to continue.
    </string>

    <string name="chair_instructions0">
        Please, stand up.
    </string>
    <string name="chair_instructions1">
        Please, sit down.
    </string>
    <string name="chair_instructions2">
        Please, stand up again.
    </string>
    <string name="chair_instructions3">
        And please, sit down.
    </string>

    <string name="standing">
        Standing.
    </string>
    <string name="sitting">
        Sitting.
    </string>

    <string name="chair_errorCalibrating">The movement was not carried out with the necessary speed.
        Touch the repeat button to try again or touch any part of the screen to continue.
    </string>

    <!-- THIGH -->
    <string name="chair_thigh_step0">
        Hook the device in the leg or put it inside a pocket. Then, get up 5 times and sit back
        down. Touch the screen when you are ready.
    </string>
    <string name="chair_thigh_step1">
        Start whenever you want.
    </string>

    <!-- SCORE -->
    <string name="score">Score</string>
    <string name="points">Points</string>
    <string name="history">History</string>
    <string name="save_as">Save</string>
    <string name="save_csv">Donwload</string>
    <string name="saved">Saved</string>
    <string name="average_speed">Average speed (m/s)</string>

    <string name="severe">Severe limitation</string>
    <string name="moderate">Moderate limitation</string>
    <string name="slight">Slight limitation</string>
    <string name="minimum">Minimum limitation</string>

    <!-- Content Description -->
    <string name="play">Play</string>
    <string name="mute">Mute sound</string>
    <string name="unmute">Unmute sound</string>
    <string name="info">Information</string>
    <string name="unable">Unable to perform test</string>
    <string name="repeat">Repeat test</string>
    <string name="chest">Chest</string>
    <string name="thigh">Thigh</string>



</resources>
