<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="2">

    <TextView
        android:id="@+id/textView2"
        style="@style/ActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_weight="0"
        android:text="@string/where_phone"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/btn_chest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/shape_select_option"
        android:clickable="true"
        android:contentDescription="@string/chest"
        android:elevation="4dp"
        android:focusable="true"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chest3" />

    <ImageButton
        android:id="@+id/btn_thigh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/shape_select_option"
        android:clickable="true"
        android:contentDescription="@string/thigh"
        android:elevation="4dp"
        android:focusable="true"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/thigh3" />

</LinearLayout>