<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="chair_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_chair_balance_color"
        android:shortcutShortLabel="@string/chair_name"
        android:shortcutLongLabel="@string/chair_name"
        android:shortcutDisabledMessage="@string/chair_name">
        <intent
            android:action="android.intent.action.chair_shortcut"
            android:targetPackage="com.example.sppb_tfg"
            android:targetClass="com.example.sppb_tfg.TestActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="gait_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_speed_gait_color"
        android:shortcutShortLabel="@string/gait_name"
        android:shortcutLongLabel="@string/gait_name"
        android:shortcutDisabledMessage="@string/gait_name">
        <intent
            android:action="android.intent.action.gait_shortcut"
            android:targetPackage="com.example.sppb_tfg"
            android:targetClass="com.example.sppb_tfg.TestActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Specify more shortcuts here. -->
    <shortcut
        android:shortcutId="balance_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_balance_wires2"
        android:shortcutShortLabel="@string/balance_name"
        android:shortcutLongLabel="@string/balance_name"
        android:shortcutDisabledMessage="@string/balance_name">
        <intent
            android:action="android.intent.action.balance_shortcut"
            android:targetPackage="com.example.sppb_tfg"
            android:targetClass="com.example.sppb_tfg.TestActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="full_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_all_wired_blue"
        android:shortcutShortLabel="@string/all_tests"
        android:shortcutLongLabel="@string/all_tests"
        android:shortcutDisabledMessage="@string/all_tests">
        <intent
            android:action="android.intent.action.full_shortcut"
            android:targetPackage="com.example.sppb_tfg"
            android:targetClass="com.example.sppb_tfg.TestActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>