<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:clipToPadding="true"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_home"
                style="@style/ActivityTitle"
                android:text="@string/title_home"
                />

            <!--<Button
                android:id="@+id/btn_full"
                style="@style/HomeButtons"
                android:background="@drawable/shape_all_button"
                android:drawableStart="@drawable/ic_all_wired_blue"
                android:text="@string/balance_name"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_balance"
                style="@style/HomeButtons"
                android:background="@drawable/shape_balance_button"
                android:drawableStart="@drawable/ic_balance_wires2"
                android:text="@string/balance_name"
                android:textColor="@color/colorBalance"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_gait"
                style="@style/HomeButtons"
                android:background="@drawable/shape_gaitspeed_button"
                android:drawableStart="@drawable/ic_speed_gait_color"
                android:text="@string/gait_name"
                android:textColor="@color/colorGaitSpeed"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_chair"
                style="@style/HomeButtons"
                android:background="@drawable/shape_chairstand_button"
                android:drawableStart="@drawable/ic_chair_balance_color"
                android:text="@string/chair_name"
                android:textColor="@color/colorChairStand"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />-->

            <!-- COLOR FILLED BUTTONS -->
            <Button
                android:id="@+id/btn_full"
                style="@style/HomeButtons"
                android:background="@drawable/shape_all_button"
                android:drawableTint="@color/colorTextOverBlue"
                android:drawableStart="@drawable/ic_all_wired_blue"
                android:text="@string/all_tests"
                android:textColor="@color/colorTextOverBlue"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_balance"
                style="@style/HomeButtons"
                android:background="@drawable/shape_balance_button"
                android:drawableTint="@color/colorTextOverBlue"
                android:drawableStart="@drawable/ic_balance_wires2"
                android:text="@string/balance_name"
                android:textColor="@color/colorTextOverBlue"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_gait"
                style="@style/HomeButtons"
                android:background="@drawable/shape_gaitspeed_button"
                android:drawableStart="@drawable/ic_speed_gait_color"
                android:drawableTint="@color/colorTextOverBlue"
                android:text="@string/gait_name"
                android:textColor="@color/colorTextOverBlue"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btn_chair"
                style="@style/HomeButtons"
                android:background="@drawable/shape_chairstand_button"
                android:drawableStart="@drawable/ic_chair_balance_color"
                android:drawableTint="@color/colorTextOverBlue"
                android:text="@string/chair_name"
                android:textColor="@color/colorTextOverBlue"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="428dp" />
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>